sample/catalog-common/src/main/java/com/goshop/catalog/common/error/AppError.java
package com.goshop.catalog.common.error;

import java.util.List;

public interface AppError {
    int getHttpStatusCode();

    String getCode();

    String getMessage();

    String getField();

    List<AppError> getCauses();

    AppErrorException exception();
}
